2004-01-11  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* src/log-common.c (log_file_new): 
	oops, set default ts_fmt.

2004-01-10  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* src/log-common.c 
	(format_header, handle_escaped, format_common): 
	(format_tstamp): Re-worked, cleaned-up, with the 
	ability to tell where exactly in the log is the
	timestamp. Make it much more easy to add new hook
	for IDMEF field within the log.

	(SYSLOG_LOG_FMT): 
	(SYSLOG_TS_FMT): update to the newer format.

	* prelude-lml.conf.in: remove invalid section,
	use new log message configuration format.

2004-01-09  Gene Gomez  <gene@gomezbrothers.com>

        * plugins/simple/ruleset:
        id and revision tags added to all rules.  This should
	allow for better management and revisioning of the 
	rulesets.

2004-01-08  Gene Gomez  <gene@gomezbrothers.com>

        * plugins/simple/ruleset:
        Rulesets "sanitized"; standardized format introduced.

2004-01-07  Nicolas Delon  <delon.nicolas@wanadoo.fr>

	* plugins/simple/simple.c:
	(build_message)
	fit idmef_message changes

2003-12-29  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* plugins.rules.in: remove paxmod. Obsoleted.

2003-12-26  Nicolas Delon  <delon.nicolas@wanadoo.fr>

	* src/lml-alert.c:
	(send_heartbeat_cb)
	call prelude_msgbuf_mark_end() to flush the alert

2003-12-26  Yoann Vandoorselaere  <yoann@prelude-ids.org>

	* src/lml-alert.c (generate_target): 
	if target_user is set add to the alert.
	(lml_emit_alert): call prelude_msgbuf_mark_end() to flush
	the alert.

	* src/pconfig.c (pconfig_set): workaround prelude-getopt
	flaw...

	* src/file-server.c (file_server_wake_up): 
	(initialize_fam): don't try to initialize fam on
	each file monitored in case fam initialization fail once.

	* src/pconfig.c (set_logwatch): remove new logfile
	configuration scheme for now, it's not ready yet.
	(set_file): create the log_file_t object here, and
	set the format according to the last format variable