@@ -1,3 +1,12 @@
+2004-01-15  Yoann Vandoorselaere  <yoann@prelude-ids.org>
+
+	* src/lml-alert.c (generate_target): 
+	reuse existing target if any. We need some kind of
+	mechanism so that it is totally doable from the rulesets.
+
+	* prelude-lml.conf.in (file): 
+	update metalog default format.
+
 2004-01-11  Yoann Vandoorselaere  <yoann@prelude-ids.org>
 
 	* src/log-common.c (log_file_new): 
